# rust-static-error-analyzer

./: .gitignore  Cargo.toml  README.md  license  static-result-analyzer.bat
src/: analysis.rs  graph.rs  legacy.rs  main.rs
src/analysis/: calls_to_chains.rs  create_graph.rs  format_graph.rs  mod.rs  types.rs
test/: .gitignore  main.rs  test.rs
test/crate1/: .gitignore
test/crate1/src/: main.rs  mod1.rs
